change jpa an spring data jdbc